--- a/src/components/ProductList.css
+++ b/src/components/ProductList.css
@@ -50,3 +50,12 @@
   color: #555;
   font-size: 1.1rem;
 }
+
+
+
+.product-search-input {
+  padding: 8px;
+  margin-right: 10px;
+  font-size: 1rem;
+  width: 250px;
+}
